# Bazel-Bazel-Bazel

./: .speaker.json  LICENSE  README.md  package-lock.json  package.json
docs/: index.html
docs/slides/: index.html
docs/slides/theme/: main.css  my-css.css
project/: .gitignore  DOCUMENTATION.md
project/angular-build-time/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
project/angular-build-time-with-bazel/: README.md  angular.json  angular.json.bak  karma.conf.js  package-lock.json  package.json
project/angular-build-time-with-bazel/src/: index.html
project/angular-build-time/src/: index.html
project/bazel-angular/: README.md  angular.json  angular.json.bak  karma.conf.js  package-lock.json  package.json
project/bazel-angular-migration/: .bazelrc  README.md  angular.json  angular.json.bak  karma.conf.js  package-lock.json  package.json
project/bazel-angular-migration/src/: BUILD.bazel  index.html
project/bazel-nestjs/: WORKSPACE  bazel-bazel-nestjs  bazel-bin  bazel-out  bazel-testlogs  package-lock.json  package.json  tsconfig.json
project/bazel-nestjs/src/: BUILD  app.module.ts
project/bazel-react/: BUILD.bazel  WORKSPACE  package.json
project/bazel-react-tsx/: BUILD.bazel  WORKSPACE  package-lock.json  package.json  package.json.backup
project/bazel-react-tsx/src/: App.tsx  BUILD.bazel  tsconfig.json
project/bazel-react/public/: BAZEL.build
project/bazel-react/src/: BUILD.bazel
project/bazel-scss/: .gitignore  BUILD  WORKSPACE  main.scss  package-lock.json  package.json
project/bazel-scss/shared/: BUILD  _colors.scss  _fonts.scss
project/bazel-svelte/: package-lock.json  package.json
project/bazel-svelte/src/: main.js
project/bzl-angular/: angular.json  angular.json.bak  karma.conf.js  package-lock.json  package.json
project/bzl-angular/src/: index.html
project/my_bazel_project/: BUILD.bazel  WORKSPACE  package-lock.json  package.json
project/react-beer/: BUILD.bazel  WORKSPACE  app.ts
project/sample/: BUILD  LICENSE  WORKSPACE  bazel-bin  bazel-out  bazel-sample  bazel-testlogs  foo.txt  package-lock.json  package.json  rules.bzl  temp
project/sample/subproject1/: BUILD  subproject1.ts
project/sample/subproject2/: BUILD  subproject2.ts
slides/asciidoc/: index.adoc  starlark
slides/asciidoc/chapters/: 00-speakers.adoc  02-function-pure.adoc  03-angular.adoc  Untitled-1  angular.adoc  chezgoogle.adoc  (+3 more)
slides/theme/: main.css
(+19 files in other folders)
