package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "app",
    srcs = glob(
        include= [
            "*.ts",
            "*.tsx"    
        ], 
        exclude=[
            "*.test.ts",
            "*.test.tsx"
        ]
    ),
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types/react",
        "@npm//@types/react-dom",
    ]
)

rollup_bundle(
    name = "bundle",
    entry_point = ":index.tsx",
    deps = [
        ":app",
        "@npm//react",
        "@npm//react-dom",
    ],
)
