load("@npm//typescript:index.bzl", "tsc")
# load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

tsc(
    name = "compile",
    outs = ["index.js"],
    args = [
        "$(location index.tsx)",
        "--outDir",
        "$(RULEDIR)",
        "--lib",
        "es2015,dom",
        "--jsx",
        "react"
    ],
    data = [
        "index.tsx",
        "@npm//@types",
        "@npm//csstype",
    ],
)

# ts_library(
#     name = "ts_demo",
#     srcs = [
#         ":App.tsx",
#         ":index.tsx",
#     ],
#     deps = [
#         "@npm//@types",
#         "@npm//react",
#         "@npm//react-dom",
#     ],
# )